--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,29 @@
 </head>
 
 <body>
-  <h1>Login</h1>
+  <h1>register</h1>
+
+  <form action="/users/register" method="POST">
+
+    <div>
+      <input type="text" id="name" name="name" placeholder="Name" required>
+    </div>
+
+    <div>
+      <input type="email" id="email" name="email" placeholder="Email" required>
+    </div>
+
+    <div>
+      <input type="password" id="password" name="password" placeholder="password" required />
+    </div>
+
+    <div>
+      <input type="password2" id="password2" name="password2" placeholder="password" required />
+    </div>
+    <div>
+
+    </div>
+  </form>
 </body>
 
 </html>
