feat: Created complete registerform and added skeleton cdn

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton-framework/1.1.1/skeleton.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Register</title>
 </head>
 
 <body>
@@ -28,8 +29,9 @@
       <input type="password2" id="password2" name="password2" placeholder="password" required />
     </div>
     <div>
-
+      <input type="submit" value="Register" />
     </div>
+    <a href="/user/login">Already registered? Login here</a>
   </form>
 </body>
 
