--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,11 +4,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton-framework/1.1.1/skeleton.css">
+  <title>Login</title>
 </head>
 
 <body>
   <h1>login</h1>
+
+  <form action="/users/login" method="POST">
+    <div>
+      <input type="email" id="email" name="email" placeholder="Email" required />
+    </div>
+
+    <div>
+      <input type="password" id="password" name="password" placeholder="password" required />
+    </div>
+
+
+    <div>
+      <input type="submit" value="Login" />
+    </div>
+    <a href="/users/register">Register</a>
+  </form>
 </body>
 
 </html>
