--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,12 +26,12 @@
     </div>
 
     <div>
-      <input type="password2" id="password2" name="password2" placeholder="password" required />
+      <input type="password" id="password2" name="password2" placeholder="confirm password" required />
     </div>
     <div>
       <input type="submit" value="Register" />
     </div>
-    <a href="/user/login">Already registered? Login here</a>
+    <a href="/users/login">Already registered? Login here</a>
   </form>
 </body>
 
