feat: Added functionality to navigate to login, homepage and register

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,10 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton-framework/1.1.1/skeleton.css">
   <title>Document</title>
 </head>
 
 <body>
+  <a href="/users/logout">Logout</a>
   <h1>Hello <%= user %></h1>
 </body>
 
