--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton-framework/1.1.1/skeleton.css">
   <title>Document</title>
 </head>
 
 <body>
 
   <h1>home</h1>
+  <a href="/users/login">Login</a>
 </body>
 
 </html>
