--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,6 +11,12 @@
 <body>
   <h1>register</h1>
 
+  <ul>
+    <% if(typeof errors != 'undefined') { %> <% errors.forEach(error => { %>
+    <li><%= error.message %></li>
+    <% }) %> <%  } %>
+  </ul>
+
   <form action="/users/register" method="POST">
 
     <div>
