--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,15 @@
 </head>
 
 <body>
+
   <h1>login</h1>
+
+  <ul>
+    <% if(messages.success_msg)  { %>
+    <li><%= messages.success_msg %></li>
+    <% } %>
+  </ul>
+
 
   <form action="/users/login" method="POST">
     <div>
